classDiagram

    direction TB

    class Solver {
        <<Abstract>>
    }

    class EulerImplicitSolver {

    }

    class EulerImplicitLoopSolver {
        AlgebraicLoopErrorThreshold : double
        AlgebraicLoopIterationCountLimit : int
        AlgebraicLoopLearningRate : double

        InputGuessMasterFlags : Dictionary~Block, bool[]~
        InputGuessSlaveFlags : Dictionary~Block, bool[]~
        InputGuessValues : Dictionary~Block, double[]~
        
        ResetFlags() void
        CalculateOutputs(time : double) void
        ForwardOutputs(block : Block) void
        HasInputGuess(block : Block) bool
        ComputeInputGuessMasterError() double
    }

    Solver <|-- EulerImplicitSolver
    EulerImplicitSolver <|-- EulerImplicitLoopSolver

    style Solver fill:white
    style EulerImplicitSolver fill:white